--- a/AngularClient/package.json
+++ b/AngularClient/package.json
@@ -20,9 +20,18 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@okta/jwt-verifier": "0.0.14",
     "@okta/okta-angular": "1.0.7",
+    "@types/cors": "2.8.4",
+    "@types/express": "4.16.0",
     "core-js": "^2.5.4",
+    "cors": "2.8.4",
+    "express": "4.16.4",
+    "express-bearer-token": "2.2.0",
     "rxjs": "~6.3.3",
+    "sqlite3": "4.0.3",
+    "tsc": "1.20150623.0",
+    "typeorm": "0.2.8",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -30,9 +39,9 @@
     "@angular/cli": "~7.0.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -44,6 +53,18 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.1"
-  }
+    "typescript": "3.1.3"
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.0.2.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DevLawrence/basic-MEAN-stack-crud-app.git"
+  },
+  "author": "Lawrence",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DevLawrence/basic-MEAN-stack-crud-app/issues"
+  },
+  "homepage": "https://github.com/DevLawrence/basic-MEAN-stack-crud-app#readme"
 }
